# cmake-tutorial

ls2-library/: CMakeLists.txt  hello.cpp  main.cpp
ls3-subdir/: CMakeLists.txt
ls3-subdir/say-hello/: CMakeLists.txt
ls3-subdir/say-hello/src/say-hello/: hello.cpp
ls4-scripting-basics/: CMakeLists.txt
ls5-scripting-control-flow/: CMakeLists.txt
ls7-scripting-advanced-functions/: CMakeLists.txt  main.cpp
ls8-source-binary-dir/: CMakeLists.txt  PrintVariables.cmake
ls8-source-binary-dir/hello-exe/: CMakeLists.txt  main.cpp
ls8-source-binary-dir/say-hello/: CMakeLists.txt
